--- a/public/test.html
+++ b/public/test.html
@@ -7,7 +7,7 @@
   </head>
   <body></body>
   <script
-    src="https://www.docaider.com/embed.js"
+    src="http://localhost:3000/embed.js"
     data-kb-id="c962805f-2d89-4e3f-9334-e4f7a1d5cb30"
     data-primary-color="#7C3AED"
     data-text-color="#FFFFFF"
