chore: update embed script URL and remove test HTML files

--- a/public/demo.html
+++ b/public/demo.html
@@ -9,7 +9,7 @@
     <!-- Single script tag with data attributes for configuration -->
     <script
       defer
-      src="http://localhost:3000/embed.js"
+      src="https://www.docaider.com/embed.js"
       data-kb-id="c962805f-2d89-4e3f-9334-e4f7a1d5cb30"
       data-title="Docaider Assistant"
       data-primary-color="#7C3AED"
