feat: update embed script configuration and add CSS path to middleware whitelist

--- a/public/demo.html
+++ b/public/demo.html
@@ -8,19 +8,17 @@
   <body>
     <!-- Single script tag with data attributes for configuration -->
     <script
-      defer
       src="https://www.docaider.com/embed.js"
       data-kb-id="c962805f-2d89-4e3f-9334-e4f7a1d5cb30"
-      data-title="Docaider Assistant"
       data-primary-color="#7C3AED"
-      data-position="bottom-right"
-      data-width="350px"
-      data-height="500px"
-      data-welcome-message="Hello! How can I help you with your documents today?"
-      data-placeholder="Ask me anything..."
-      data-button-text="Chat with Docaider"
-      data-show-button-text="false"
       data-text-color="#FFFFFF"
+      data-position="bottom-right"
+      data-welcome-message="Hi there! How can I help you with your questions?"
+      data-button-icon="chat"
+      data-button-text="Chat with AI"
+      data-show-button-text="false"
+      data-height="500px"
+      data-width="350px"
     ></script>
   </body>
 </html>
