feat: new embed

--- a/public/demo.html
+++ b/public/demo.html
@@ -245,18 +245,6 @@
           </div>
         </div>
       </div>
-      <!-- Wave -->
-      <svg
-        class="-mb-1 block w-full text-white"
-        viewBox="0 0 1440 100"
-        preserveAspectRatio="none"
-        fill="currentColor"
-        aria-hidden="true"
-      >
-        <path
-          d="M0 0h1440v55c-120 30-240 45-360 45s-240-15-360-45S480 10 360 10 120 25 0 55V0z"
-        />
-      </svg>
     </section>
 
     <!-- Destinations -->
@@ -724,18 +712,7 @@
     </script>
   </body>
 
-  <script
-    src="https://www.docaider.com/embed.js"
-    data-kb-id="be5d3f12-abc6-4400-9976-1d612e9b3afb"
-    data-primary-color="#7C3AED"
-    data-text-color="#FFFFFF"
-    data-position="bottom-right"
-    data-welcome-message="สวัสดีค่ะ คุณอยากให้ฉันช่วยตอบคำถามเรื่องอะไรดีคะ?"
-    data-button-icon="chat"
-    data-button-text="แชทกับรู้ใจ"
-    data-title="แชทกับรู้ใจ"
-    data-show-button-text="false"
-    data-height="500px"
-    data-width="350px"
-  ></script>
+  <!-- #0091ff -->
+  <!-- #7C3AED -->
+  <!-- #FFC107 -->
 </html>
