style: improve dialog padding and mobile layout responsiveness

--- a/public/demo.html
+++ b/public/demo.html
@@ -711,7 +711,20 @@
       document.getElementById("year").textContent = new Date().getFullYear();
     </script>
   </body>
-
+  <script
+    src="https://www.docaider.com/embed.js"
+    data-kb-id="be5d3f12-abc6-4400-9976-1d612e9b3afb"
+    data-primary-color="#7fff00"
+    data-text-color="#FFFFFF"
+    data-position="bottom-right"
+    data-welcome-message="สวัสดีค่ะ คุณอยากให้ฉันช่วยตอบคำถามเรื่องอะไรดีคะ?"
+    data-button-icon="chat"
+    data-button-text="แชทเลย"
+    data-title="แชทกับรู้ใจ"
+    data-show-button-text="true"
+    data-height="500px"
+    data-width="350px"
+  ></script>
   <!-- #0091ff -->
   <!-- #7C3AED -->
   <!-- #FFC107 -->
