--- a/public/demo.html
+++ b/public/demo.html
@@ -713,14 +713,14 @@
   </body>
   <script
     src="https://www.docaider.com/embed.js"
-    data-kb-id="be5d3f12-abc6-4400-9976-1d612e9b3afb"
-    data-primary-color="#7fff00"
+    data-kb-id="092a8b5e-d349-40e2-b431-bbf0cc260817"
+    data-primary-color="#7C3AED"
     data-text-color="#FFFFFF"
     data-position="bottom-right"
-    data-welcome-message="สวัสดีค่ะ คุณอยากให้ฉันช่วยตอบคำถามเรื่องอะไรดีคะ?"
+    data-welcome-message="Hi there! How can I help you with your questions?"
     data-button-icon="chat"
-    data-button-text="แชทเลย"
-    data-title="แชทกับรู้ใจ"
+    data-button-text="Chat with AI"
+    data-title="สอบถามเกี่ยวกับ Pasupol"
     data-show-button-text="true"
     data-height="500px"
     data-width="350px"
