--- a/test-isolation.html
+++ b/test-isolation.html
@@ -112,13 +112,17 @@
     <!-- Docaider Embed Script -->
     <script
       src="http://localhost:3000/embed.js"
-      data-kb-id="f07a5428-6356-4b77-b08b-55999079d3ad"
-      data-primary-color="#7c3aed"
+      data-kb-id="eec31a66-feb6-4ba2-bbc9-fe3ecddf2fd9"
+      data-primary-color="#6208ff"
       data-text-color="#FFFFFF"
       data-position="bottom-right"
-      data-welcome-message="Hello! I'm here to help test CSS isolation."
-      data-title="Test Assistant"
-      data-placeholder="Type your message..."
+      data-welcome-message="Hi there! How can I help you with your questions?"
+      data-button-icon="chat"
+      data-button-text="Chat with AI"
+      data-title="ถามได้ทุกอย่าง"
+      data-show-button-text="true"
+      data-height="500px"
+      data-width="350px"
     ></script>
   </body>
 </html>
